Update trip API and refactor associated server routes
