# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
+export * from "./destinations";
 export * from "./places";
 export * from "./trips";
 export * from "./votes";
